--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,49 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="spcgroup.damrong.myrestaurant.MainActivity">
+    tools:context="spcgroup.damrong.myrestaurant.MainActivity"
+    android:background="@drawable/bg700">
 
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_centerHorizontal="true"
+        android:background="#64ffffff"
+        android:padding="50dp"
+        android:layout_marginTop="20dp">
+
+        <ImageView
+            android:layout_width="@dimen/icon"
+            android:layout_height="@dimen/icon"
+            android:id="@+id/imageView"
+            android:src="@drawable/restaurant512"
+            android:layout_gravity="center_horizontal" />
+
+        <EditText
+            android:layout_width="@dimen/edittext"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText"
+            android:hint="Username :"
+            android:layout_marginTop="10dp"
+            android:inputType="text"
+            android:layout_gravity="center_horizontal" />
+
+        <EditText
+            android:layout_width="@dimen/edittext"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText2"
+            android:hint="Password :"
+            android:layout_marginTop="5dp"
+            android:inputType="textPassword"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="OK"
+        android:id="@+id/button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="false" />
 </RelativeLayout>
